# compiler-construction

./: .gitignore  ASSIGNMENTS  CPP.cf  CREDENTIALS  README.md  ZOOM  run_tests
project/: CPP.cf  TODO  run_tests
project1/: run_tests
project1/tests/: 6-grammar.cc
project2/: Makefile  TODO  compiler.cabal  main.hs
project2/tests/: test.cc
project3/: Codegenerator.hs  TODO  Typechecker.hs  TypedAST.hs  compiler.cabal  main.hs  stack.yaml
project3/tests/: test.cc
tests/: 7-variables.cc
